# nani

./: .clang-format  .clang-tidy  .cmake-format.py  CMakeLists.txt  CMakePresets.json  vcpkg.json
.reuse/: dep5
cmake/: bs.cmake
src/: CMakeLists.txt
src/include/nani/: matrix.fwd.hpp  matrix.hpp  meta.hpp  smath.hpp  static_array.hpp  vector.fwd.hpp  vector.hpp  wrap_iterator.hpp
src/lib/nani/: nani.cpp
test/: CMakeLists.txt
test/common/: CMakeLists.txt
test/common/include/testmol/compat/: catch_main.hpp
test/common/include/testmol/compat/detail/: runner.hpp
test/common/lib/testmol/compat/detail/: runner.cpp
test/common/lib/testnani/: testnani.cpp
test/unit/: nani.vector.t.cpp  smoke.main.t.cpp
